@@ -1,3 +1,8 @@
+2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elf32-i386.c (elf_i386_check_relocs): Cache or free isymbuf.
+	* elf64-x86-64.c (elf64_x86_64_check_relocs): Likewise.
+
 2009-06-18  Nick Clifton  <nickc@redhat.com>
 
 	* elflink.c (elf_link_sort_relocs): Return early if there are no
